# AdHoc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.org  build.bat  build.sh  install.bat  install.sh
Install/: install_linux.sh  install_mac.sh  install_windows.bat
Source/: Main.cpp  Utility.hpp  Utility.mm  Vertex.hpp  Window.hpp
Source/Api/Vulkan/: Allocator.cpp  Allocator.hpp  Attachments.cpp  Attachments.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputePipeline.cpp  ComputePipeline.hpp  Context.cpp  Context.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  DeviceQueues.cpp  DeviceQueues.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Initializers.hpp  Instance.cpp  Instance.hpp  Memory.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  (+24 more)
Source/Api/Vulkan/Shaders/: bloomRecompose.frag  bloomRecompose.frag.spv  brightColor.frag  brightColor.frag.spv  brightColor.vert  draw_shadowmap.frag  draw_shadowmap.vert  editor_pbr.frag  editor_pbr.frag.spv  fragment.frag  gaussianBlur.frag  gaussianBlur.frag.spv  hdr.frag  hdr.frag.spv  hdr.vert  pbr.frag  pbr.frag.spv  pbr.vert  pbr_data.glsl  pbr_functions.glsl  shadowmap.frag  shadowmap.vert  stencil.frag  ui.frag  ui.vert  vertex.vert
Source/Core/Audio/: Audio.cpp  Audio.hpp  LoadWav.hpp
Source/Core/Entity/: Entity.hpp
Source/Core/Event/: Event.cpp  Event.hpp  EventTypes.hpp
Source/Core/Input/: AppleKeycodes.hpp  Controller.cpp  Controller.hpp  Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Keycodes.hpp  Mouse.cpp  Mouse.hpp
Source/Core/Math/: Math.hpp
Source/Core/Math/source/: Matrix.hpp  Matrix.inl  Matrix2D.hpp  Matrix2D.inl  Matrix3D.hpp  Matrix3D.inl  Matrix4D.hpp  Matrix4D.inl  Numbers.hpp  Quaternion.hpp  Quaternion.inl  Vector.hpp  Vector.inl  Vector2D.hpp  Vector2D.inl  Vector3D.hpp  Vector3D.inl  Vector4D.hpp  Vector4D.inl  XmmMatrix.hpp  XmmMatrix.inl  XmmVector.hpp  XmmVector.inl
Source/Core/Physics/: Physics.cpp  Physics.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
Source/Core/Scene/: Components.hpp  ComponentsSerializer.hpp  Scene.cpp  Scene.hpp  Serializer.cpp  Serializer.hpp
Source/Core/Scene/Components/: Camera.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RigidBody.cpp  RigidBody.hpp  Tag.hpp  Transform.hpp
Source/Core/Scripting/: Script.hpp  ScriptHandler.cpp  ScriptHandler.hpp
Source/Core/Scripting/Scripts/: PlayerScript.lua  Ray.lua  ball.lua  cube1.lua  cube2.lua  cube_spawn.lua  enemy.lua  floor1.lua  game_camera.lua  game_over.lua  goal.lua  movement.lua  player.lua  score.lua  sphere.lua  template.lua
Source/Core/Std/: Algorithms.hpp  Array.hpp  Benchmark.hpp  Concepts.hpp  File.hpp  Function.hpp  Iterator.hpp  List.hpp  PriorityQueue.hpp  Queue.hpp  Random.hpp  SharedPtr.hpp  SparseSet.hpp  Stack.hpp  StaticArray.hpp  Stopwatch.hpp  TGALoader.hpp  UniquePtr.hpp  Utility.hpp
Source/Data/Assets/Models/: Boss01.fbx
Source/Data/Assets/Scenes/: BallThrow.scene  Game1_Scene1.scene  ManyCubes.scene  Raycast.scene  Raycasting.scene  Test2.scene  level1.scene  many_cubes.scene  one.scene  test.scene  test1.scene
Source/Editor/: Editor.cpp  Editor.hpp
Source/Editor/Api/Vulkan/: VulkanImGui.cpp  VulkanImGui.hpp
Source/Editor/UIOverlay/: UIOverlay.cpp  UIOverlay.hpp
Source/Editor/UIOverlay/Panels/: AssetPanel.cpp  AssetPanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  ControlsPanel.cpp  ControlsPanel.hpp  GamePanel.cpp  GamePanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ScenePanel.cpp  ScenePanel.hpp  ViewportRect.hpp  ViewportUtility.hpp
Source/Editor/UIOverlay/Settings/: ImGui.ini
Source/Platform/Linux/: Window.cpp
Source/Platform/Windows/: Window.cpp
Source/Platform/macOS/: Window.mm
